CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(squirrel3)

MESSAGE(STATUS "Using toolchain '${CMAKE_TOOLCHAIN_FILE}'")

IF(NOT TARGET_ARCH_PATH)
	set(TARGET_ARCH_PATH "native")
ENDIF(NOT TARGET_ARCH_PATH)

IF(NOT CMAKE_BUILD_TYPE)
	MESSAGE(FATAL_ERROR "CMAKE_BUILD_TYPE must be one of: Debug, Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(MSVC)
	OPTION(USE_MSVC_FAST_FLOATINGPOINT "Use MSVC /fp:fast option" ON)
	IF(USE_MSVC_FAST_FLOATINGPOINT)
		ADD_DEFINITIONS(/fp:fast)
	ENDIF(USE_MSVC_FAST_FLOATINGPOINT)
ENDIF(MSVC)

IF(WIN32)
	ADD_DEFINITIONS(/D _CRT_SECURE_NO_WARNINGS)
ENDIF(WIN32)

STRING(TOLOWER ${CMAKE_BUILD_TYPE} LOWERCASE_NAME)
set(LIBRARY_OUTPUT_PATH ../../lib/${TARGET_ARCH_PATH}/${LOWERCASE_NAME}/)

MESSAGE("System name: ${CMAKE_SYSTEM_NAME}")
MESSAGE("Building for target architecture: ${TARGET_ARCH_PATH}")

ADD_SUBDIRECTORY(sq)
ADD_SUBDIRECTORY(sqstdlib)
ADD_SUBDIRECTORY(squirrel)
